<resources>
    <string name="app_name">Calculadora</string>
    <string name="num_1">Primer valor:</string>
    <string name="num_2">Segundo valor:</string>
    <string name="result">Resultado:</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="modulo">%</string>
</resources>
